--- a/Test_1_applique.vcxproj.filters
+++ b/Test_1_applique.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="btnUndoRedo.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
+    <ClCompile Include="Application.cpp">
+      <Filter>Файлы исходного кода</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Figure.h">
@@ -70,6 +73,9 @@
     </ClInclude>
     <ClInclude Include="Story.h">
       <Filter>Файлы исходного кода</Filter>
+    </ClInclude>
+    <ClInclude Include="Application.h">
+      <Filter>Заголовочные файлы</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
